Partly implement frontend publications
